--- a/temp.ipynb
+++ b/temp.ipynb
@@ -10,36 +10,38 @@
     "\n",
     "def fix_product_control_fast(filepath):\n",
     "    excel = win32.gencache.EnsureDispatch('Excel.Application')\n",
-    "    excel.Visible = False  # Show Excel window if needed for debugging\n",
+    "    excel.Visible = False\n",
     "\n",
     "    wb = excel.Workbooks.Open(filepath)\n",
     "    ws = wb.Sheets('Data')\n",
     "\n",
-    "    # Header row is 2, data starts from row 3\n",
-    "    last_row = ws.Cells(ws.Rows.Count, 1).End(-4162).Row  # -4162 == xlUp\n",
+    "    last_row = ws.Cells(ws.Rows.Count, 1).End(-4162).Row  # xlUp\n",
     "\n",
-    "    # Find columns\n",
+    "    # Find column indices\n",
     "    header = [ws.Cells(2, col).Value for col in range(1, ws.UsedRange.Columns.Count + 1)]\n",
     "    bf_col = header.index('Business Framework') + 1\n",
     "    bfg_col = header.index('Business Framework Group') + 1\n",
     "\n",
-    "    # Apply AutoFilter on Business Framework\n",
+    "    # Apply AutoFilter\n",
     "    ws.Range(ws.Cells(2, bf_col), ws.Cells(last_row, bfg_col)).AutoFilter(Field=bf_col, Criteria1='PRODUCT CONTROL')\n",
     "\n",
-    "    # Loop visible cells only (filtered)\n",
-    "    rng = ws.Range(ws.Cells(3, bf_col), ws.Cells(last_row, bf_col)).SpecialCells(12)  # 12 = xlCellTypeVisible\n",
+    "    # Get visible cells in Business Framework column\n",
+    "    visible_cells = ws.Range(ws.Cells(3, bf_col), ws.Cells(last_row, bf_col)).SpecialCells(12)  # xlCellTypeVisible\n",
     "\n",
-    "    for cell in rng:\n",
-    "        ws.Cells(cell.Row, bfg_col).Value = 'L3 - Financial Control and Tax'\n",
+    "    # Collect rows\n",
+    "    rows_to_update = [cell.Row for cell in visible_cells]\n",
     "\n",
-    "    # Remove filter\n",
+    "    # Bulk update Business Framework Group column\n",
+    "    for row in rows_to_update:\n",
+    "        ws.Cells(row, bfg_col).Value = 'L3 - Financial Control and Tax'\n",
+    "\n",
     "    ws.AutoFilterMode = False\n",
     "\n",
     "    wb.Save()\n",
     "    wb.Close(False)\n",
     "    excel.Quit()\n",
     "\n",
-    "    print(\"✅ PRODUCT CONTROL fix done with filter!\")\n",
+    "    print(f\"✅ PRODUCT CONTROL fix done for {len(rows_to_update)} rows!\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    fix_product_control_fast(\"Base_Dashboard.xlsx\")\n"
