--- a/temp.ipynb
+++ b/temp.ipynb
@@ -8,43 +8,59 @@
    "source": [
     "import win32com.client as win32\n",
     "\n",
-    "def fix_product_control_fast(filepath):\n",
-    "    excel = win32.gencache.EnsureDispatch('Excel.Application')\n",
-    "    excel.Visible = False\n",
+    "def update_product_control(filepath):\n",
+    "    # Start Excel\n",
+    "    excel = win32.gencache.EnsureDispatch(\"Excel.Application\")\n",
+    "    excel.Visible = False  # True for debugging\n",
     "\n",
     "    wb = excel.Workbooks.Open(filepath)\n",
-    "    ws = wb.Sheets('Data')\n",
+    "    ws = wb.Sheets(\"Data\")\n",
     "\n",
+    "    # Find last used row\n",
     "    last_row = ws.Cells(ws.Rows.Count, 1).End(-4162).Row  # xlUp\n",
     "\n",
-    "    # Find column indices\n",
-    "    header = [ws.Cells(2, col).Value for col in range(1, ws.UsedRange.Columns.Count + 1)]\n",
-    "    bf_col = header.index('Business Framework') + 1\n",
-    "    bfg_col = header.index('Business Framework Group') + 1\n",
+    "    # Find columns\n",
+    "    headers = [ws.Cells(2, col).Value for col in range(1, ws.UsedRange.Columns.Count + 1)]\n",
+    "    bf_col = headers.index(\"Business Framework\") + 1\n",
+    "    bfg_col = headers.index(\"Business Framework Group\") + 1\n",
     "\n",
-    "    # Apply AutoFilter\n",
-    "    ws.Range(ws.Cells(2, bf_col), ws.Cells(last_row, bfg_col)).AutoFilter(Field=bf_col, Criteria1='PRODUCT CONTROL')\n",
+    "    # Apply AutoFilter on Business Framework\n",
+    "    ws.Range(ws.Cells(2, bf_col), ws.Cells(last_row, bfg_col)).AutoFilter(Field=bf_col, Criteria1=\"PRODUCT CONTROL\")\n",
     "\n",
-    "    # Get visible cells in Business Framework column\n",
-    "    visible_cells = ws.Range(ws.Cells(3, bf_col), ws.Cells(last_row, bf_col)).SpecialCells(12)  # xlCellTypeVisible\n",
+    "    # Get visible rows in filter (skip header)\n",
+    "    visible = ws.Range(ws.Cells(3, bf_col), ws.Cells(last_row, bf_col)).SpecialCells(12)  # 12 = xlCellTypeVisible\n",
+    "    rows = sorted([cell.Row for cell in visible])\n",
     "\n",
-    "    # Collect rows\n",
-    "    rows_to_update = [cell.Row for cell in visible_cells]\n",
+    "    if not rows:\n",
+    "        print(\"✅ No PRODUCT CONTROL rows found. Nothing to do.\")\n",
+    "    else:\n",
+    "        # Find continuous blocks for fast bulk update\n",
+    "        blocks = []\n",
+    "        block = [rows[0]]\n",
+    "        for r1, r2 in zip(rows, rows[1:]):\n",
+    "            if r2 == r1 + 1:\n",
+    "                block.append(r2)\n",
+    "            else:\n",
+    "                blocks.append(block)\n",
+    "                block = [r2]\n",
+    "        blocks.append(block)\n",
     "\n",
-    "    # Bulk update Business Framework Group column\n",
-    "    for row in rows_to_update:\n",
-    "        ws.Cells(row, bfg_col).Value = 'L3 - Financial Control and Tax'\n",
+    "        for block in blocks:\n",
+    "            first, last = block[0], block[-1]\n",
+    "            length = last - first + 1\n",
+    "            ws.Range(ws.Cells(first, bfg_col), ws.Cells(last, bfg_col)).Value = [[\"L3 - Financial Control & Tax\"]] * length\n",
     "\n",
+    "        print(f\"✅ Updated PRODUCT CONTROL for {len(rows)} rows in {len(blocks)} blocks.\")\n",
+    "\n",
+    "    # Clear filter\n",
     "    ws.AutoFilterMode = False\n",
     "\n",
     "    wb.Save()\n",
     "    wb.Close(False)\n",
     "    excel.Quit()\n",
     "\n",
-    "    print(f\"✅ PRODUCT CONTROL fix done for {len(rows_to_update)} rows!\")\n",
-    "\n",
     "if __name__ == \"__main__\":\n",
-    "    fix_product_control_fast(\"Base_Dashboard.xlsx\")\n"
+    "    update_product_control(r\"C:\\Path\\To\\Your\\Report.xlsx\")\n"
    ]
   },
   {
