--- a/temp.ipynb
+++ b/temp.ipynb
@@ -9,14 +9,12 @@
     "import win32com.client as win32\n",
     "\n",
     "def update_product_control(filepath):\n",
-    "    # Start Excel\n",
-    "    excel = win32.gencache.EnsureDispatch(\"Excel.Application\")\n",
-    "    excel.Visible = False  # True for debugging\n",
+    "    xl = win32.gencache.EnsureDispatch(\"Excel.Application\")\n",
+    "    xl.Visible = False\n",
     "\n",
-    "    wb = excel.Workbooks.Open(filepath)\n",
+    "    wb = xl.Workbooks.Open(filepath)\n",
     "    ws = wb.Sheets(\"Data\")\n",
     "\n",
-    "    # Find last used row\n",
     "    last_row = ws.Cells(ws.Rows.Count, 1).End(-4162).Row  # xlUp\n",
     "\n",
     "    # Find columns\n",
@@ -24,17 +22,25 @@
     "    bf_col = headers.index(\"Business Framework\") + 1\n",
     "    bfg_col = headers.index(\"Business Framework Group\") + 1\n",
     "\n",
-    "    # Apply AutoFilter on Business Framework\n",
-    "    ws.Range(ws.Cells(2, bf_col), ws.Cells(last_row, bfg_col)).AutoFilter(Field=bf_col, Criteria1=\"PRODUCT CONTROL\")\n",
+    "    # Make sure NO old filter is applied\n",
+    "    if ws.AutoFilterMode:\n",
+    "        ws.AutoFilterMode = False\n",
     "\n",
-    "    # Get visible rows in filter (skip header)\n",
-    "    visible = ws.Range(ws.Cells(3, bf_col), ws.Cells(last_row, bf_col)).SpecialCells(12)  # 12 = xlCellTypeVisible\n",
-    "    rows = sorted([cell.Row for cell in visible])\n",
+    "    # Apply new filter\n",
+    "    ws.Range(ws.Cells(2, 1), ws.Cells(last_row, bfg_col)).AutoFilter(Field=bf_col, Criteria1=\"PRODUCT CONTROL\")\n",
     "\n",
-    "    if not rows:\n",
-    "        print(\"✅ No PRODUCT CONTROL rows found. Nothing to do.\")\n",
-    "    else:\n",
-    "        # Find continuous blocks for fast bulk update\n",
+    "    try:\n",
+    "        # Pick visible rows below header\n",
+    "        visible = ws.Range(ws.Cells(3, bf_col), ws.Cells(last_row, bf_col)).SpecialCells(12)  # xlCellTypeVisible\n",
+    "    except Exception:\n",
+    "        print(\"✅ No PRODUCT CONTROL rows found. Nothing to update.\")\n",
+    "        wb.Close(SaveChanges=True)\n",
+    "        xl.Quit()\n",
+    "        return\n",
+    "\n",
+    "    rows = sorted({cell.Row for cell in visible})\n",
+    "\n",
+    "    if rows:\n",
     "        blocks = []\n",
     "        block = [rows[0]]\n",
     "        for r1, r2 in zip(rows, rows[1:]):\n",
@@ -47,17 +53,18 @@
     "\n",
     "        for block in blocks:\n",
     "            first, last = block[0], block[-1]\n",
-    "            length = last - first + 1\n",
-    "            ws.Range(ws.Cells(first, bfg_col), ws.Cells(last, bfg_col)).Value = [[\"L3 - Financial Control & Tax\"]] * length\n",
+    "            ws.Range(ws.Cells(first, bfg_col), ws.Cells(last, bfg_col)).Value = [[\"L3 - Financial Control and Tax\"]] * (last - first + 1)\n",
     "\n",
-    "        print(f\"✅ Updated PRODUCT CONTROL for {len(rows)} rows in {len(blocks)} blocks.\")\n",
+    "        print(f\"✅ Updated {len(rows)} rows in {len(blocks)} blocks.\")\n",
+    "    else:\n",
+    "        print(\"✅ No rows matched filter.\")\n",
     "\n",
     "    # Clear filter\n",
     "    ws.AutoFilterMode = False\n",
     "\n",
     "    wb.Save()\n",
     "    wb.Close(False)\n",
-    "    excel.Quit()\n",
+    "    xl.Quit()\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    update_product_control(r\"C:\\Path\\To\\Your\\Report.xlsx\")\n"
