--- a/temp.ipynb
+++ b/temp.ipynb
@@ -6,6 +6,90 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import xlwings as xw\n",
+    "\n",
+    "def delete_prev_year_rows_xlwings_safe(file_path, sheet_name, header_row, target_year):\n",
+    "    app = xw.App(visible=False)\n",
+    "    wb = app.books.open(file_path)\n",
+    "    ws = wb.sheets[sheet_name]\n",
+    "\n",
+    "    headers = ws.range((header_row, 1)).expand('right').value\n",
+    "\n",
+    "    try:\n",
+    "        period_col_idx = headers.index(\"Period Month\") + 1\n",
+    "    except ValueError:\n",
+    "        app.quit()\n",
+    "        raise Exception(\"'Period Month' column not found!\")\n",
+    "\n",
+    "    prev_yy = str(int(target_year[-2:]) - 1).zfill(2)\n",
+    "    print(f\"🔍 Checking if any rows end with {prev_yy}...\")\n",
+    "\n",
+    "    # 👉 🔍 NEW CHECK STEP — see note below\n",
+    "    first_data_row = header_row + 1\n",
+    "    last_row = ws.cells.last_cell.row\n",
+    "\n",
+    "    period_col_range = ws.range((first_data_row, period_col_idx), (last_row, period_col_idx)).value\n",
+    "    if not isinstance(period_col_range, list):\n",
+    "        period_col_range = [period_col_range]\n",
+    "\n",
+    "    has_prev_year = any(\n",
+    "        str(cell).strip().endswith(prev_yy)\n",
+    "        for cell in period_col_range if cell\n",
+    "    )\n",
+    "\n",
+    "    if not has_prev_year:\n",
+    "        print(\"✅ No previous year data found — skipping deletion.\")\n",
+    "        wb.close()\n",
+    "        app.quit()\n",
+    "        return\n",
+    "\n",
+    "    print(f\"🗑️ Previous year data found — deleting rows ending with {prev_yy}...\")\n",
+    "\n",
+    "    # Clear filter if any\n",
+    "    ws.api.AutoFilterMode = False\n",
+    "\n",
+    "    # Apply AutoFilter\n",
+    "    ws.range((header_row, 1)).api.AutoFilter(\n",
+    "        Field=period_col_idx,\n",
+    "        Criteria1=f\"*{prev_yy}\"\n",
+    "    )\n",
+    "\n",
+    "    xlCellTypeVisible = 12\n",
+    "\n",
+    "    try:\n",
+    "        # Only visible rows in the data range\n",
+    "        used_range = ws.range((first_data_row, 1), (last_row, ws.cells.last_cell.column))\n",
+    "        visible_cells = used_range.api.SpecialCells(xlCellTypeVisible)\n",
+    "        visible_cells.EntireRow.Delete()\n",
+    "        print(\"✅ Matching data rows deleted.\")\n",
+    "    except Exception:\n",
+    "        print(\"No matching rows found — nothing deleted.\")\n",
+    "\n",
+    "    ws.api.AutoFilterMode = False\n",
+    "\n",
+    "    cleaned_file = file_path.replace(\".xlsx\", f\"_cleaned_{target_year}.xlsx\")\n",
+    "    wb.save(cleaned_file)\n",
+    "    wb.close()\n",
+    "    app.quit()\n",
+    "\n",
+    "    print(f\"✅ Cleaned file saved: {cleaned_file}\")\n",
+    "\n",
+    "\n",
+    "# Example usage:\n",
+    "delete_prev_year_rows_xlwings_safe(\n",
+    "    file_path=\"your_file.xlsx\",\n",
+    "    sheet_name=\"Data\",\n",
+    "    header_row=2,\n",
+    "    target_year=\"2025\"\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import win32com.client as win32\n",
     "\n",
     "def update_product_control(filepath):\n",
