--- a/temp.ipynb
+++ b/temp.ipynb
@@ -8,6 +8,38 @@
    "source": [
     "from openpyxl import load_workbook\n",
     "\n",
+    "def overwrite_data_only(df, target_file, target_sheet, header_row=1):\n",
+    "    wb = load_workbook(target_file)\n",
+    "    ws = wb[target_sheet]\n",
+    "\n",
+    "    # 1️⃣ Clear old data rows only (leave header untouched)\n",
+    "    max_row = ws.max_row\n",
+    "    max_col = ws.max_column\n",
+    "\n",
+    "    for row in ws.iter_rows(min_row=header_row+1, max_row=max_row, max_col=max_col):\n",
+    "        for cell in row:\n",
+    "            cell.value = None\n",
+    "\n",
+    "    # 2️⃣ Write new data cell-by-cell starting from row 2\n",
+    "    for i, row in df.iterrows():\n",
+    "        for j, value in enumerate(row, start=1):\n",
+    "            ws.cell(row=header_row+1 + i, column=j).value = value\n",
+    "\n",
+    "    wb.save(target_file)\n",
+    "    wb.close()\n",
+    "\n",
+    "    print(f\"✅ Data written below header — formulas and structure are safe!\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openpyxl import load_workbook\n",
+    "\n",
     "def fix_product_control_bfg(file_path):\n",
     "    wb = load_workbook(file_path)\n",
     "    ws = wb[\"Data\"]\n",
