--- a/temp.ipynb
+++ b/temp.ipynb
@@ -6,30 +6,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from openpyxl import load_workbook\n",
+    "import xlwings as xw\n",
     "\n",
-    "def overwrite_data_only(df, target_file, target_sheet, header_row=1):\n",
-    "    wb = load_workbook(target_file)\n",
-    "    ws = wb[target_sheet]\n",
+    "def replace_data_xlwings(source_df, target_file, target_sheet_name, header_row=1):\n",
+    "    # Launch Excel in visible mode if you want to see it\n",
+    "    app = xw.App(visible=True)\n",
+    "    wb = app.books.open(target_file)\n",
+    "    ws = wb.sheets[target_sheet_name]\n",
     "\n",
-    "    # 1️⃣ Clear old data rows only (leave header untouched)\n",
-    "    max_row = ws.max_row\n",
-    "    max_col = ws.max_column\n",
+    "    # 1️⃣ Find last row & column\n",
+    "    last_row = ws.cells.last_cell.row\n",
+    "    last_col = ws.cells.last_cell.column\n",
     "\n",
-    "    for row in ws.iter_rows(min_row=header_row+1, max_row=max_row, max_col=max_col):\n",
-    "        for cell in row:\n",
-    "            cell.value = None\n",
+    "    # 2️⃣ Define the range BELOW header row\n",
+    "    data_range = ws.range((header_row + 1, 1), (last_row, last_col))\n",
+    "    data_range.clear_contents()  # equivalent to pressing Delete in Excel\n",
     "\n",
-    "    # 2️⃣ Write new data cell-by-cell starting from row 2\n",
-    "    for i, row in df.iterrows():\n",
-    "        for j, value in enumerate(row, start=1):\n",
-    "            ws.cell(row=header_row+1 + i, column=j).value = value\n",
+    "    # 3️⃣ Write new DataFrame starting at row 2\n",
+    "    ws.range((header_row + 1, 1)).value = source_df.values.tolist()\n",
     "\n",
-    "    wb.save(target_file)\n",
+    "    wb.save()\n",
     "    wb.close()\n",
+    "    app.quit()\n",
     "\n",
-    "    print(f\"✅ Data written below header — formulas and structure are safe!\")\n",
-    "\n"
+    "    print(\"✅ Data replaced safely — structure, formatting & formulas intact.\")\n"
    ]
   },
   {
