--- a/temp.ipynb
+++ b/temp.ipynb
@@ -8,28 +8,74 @@
    "source": [
     "import xlwings as xw\n",
     "\n",
-    "def replace_data_xlwings(source_df, target_file, target_sheet_name, header_row=1):\n",
-    "    # Launch Excel in visible mode if you want to see it\n",
+    "def main():\n",
+    "    # ---- Open workbooks ----\n",
     "    app = xw.App(visible=True)\n",
-    "    wb = app.books.open(target_file)\n",
-    "    ws = wb.sheets[target_sheet_name]\n",
+    "    template_wb = xw.Book('template.xlsx')\n",
+    "    output_wb = xw.Book('output.xlsx')\n",
     "\n",
-    "    # 1️⃣ Find last row & column\n",
-    "    last_row = ws.cells.last_cell.row\n",
-    "    last_col = ws.cells.last_cell.column\n",
+    "    block_template = template_wb.sheets['Block_Template']\n",
+    "    check_template = template_wb.sheets['Check_Template']\n",
+    "    dashboard = output_wb.sheets['Dashboard']\n",
     "\n",
-    "    # 2️⃣ Define the range BELOW header row\n",
-    "    data_range = ws.range((header_row + 1, 1), (last_row, last_col))\n",
-    "    data_range.clear_contents()  # equivalent to pressing Delete in Excel\n",
+    "    countries = ['France', 'Germany', 'Spain']\n",
     "\n",
-    "    # 3️⃣ Write new DataFrame starting at row 2\n",
-    "    ws.range((header_row + 1, 1)).value = source_df.values.tolist()\n",
+    "    # ---- Placement ----\n",
+    "    start_col = 1  # A\n",
+    "    start_row = 3\n",
     "\n",
-    "    wb.save()\n",
-    "    wb.close()\n",
+    "    blocks_meta = []\n",
+    "\n",
+    "    for country in countries:\n",
+    "        # 1️⃣ Copy template block range\n",
+    "        source_range = block_template.range('B2:I10')  # example range\n",
+    "\n",
+    "        # 2️⃣ Determine where to paste\n",
+    "        target_range = dashboard.range((start_row, start_col))\n",
+    "        source_range.copy(target_range)\n",
+    "\n",
+    "        # 3️⃣ Fill the country name in merged title cell\n",
+    "        dashboard.range((start_row, start_col)).value = country\n",
+    "\n",
+    "        # 4️⃣ Track block meta\n",
+    "        blocks_meta.append({\n",
+    "            'header': country,\n",
+    "            'start_row': start_row,\n",
+    "            'start_col': start_col,\n",
+    "            'end_row': start_row + source_range.rows.count - 1,\n",
+    "            'end_col': start_col + source_range.columns.count - 1\n",
+    "        })\n",
+    "\n",
+    "        # 5️⃣ Update for next block with gap\n",
+    "        start_row += source_range.rows.count + 2  # 2 rows gap\n",
+    "\n",
+    "    # ---- Now build Check block ----\n",
+    "\n",
+    "    # Example: copy check template to after last block\n",
+    "    check_range = check_template.range('B2:D5')\n",
+    "    target_check = dashboard.range((start_row, start_col))\n",
+    "    check_range.copy(target_check)\n",
+    "\n",
+    "    # Build dynamic SUM formula:\n",
+    "    total_cells = []\n",
+    "    for block in blocks_meta:\n",
+    "        # Example: each block’s total is always last row, col H (col 8)\n",
+    "        col_letter = xw.utils.col_name(block['start_col'] + 7)\n",
+    "        total_cell = f\"{col_letter}{block['end_row']}\"\n",
+    "        total_cells.append(total_cell)\n",
+    "\n",
+    "    # Example: write dynamic SUM into Check block cell\n",
+    "    sum_formula = f\"=SUM({','.join(total_cells)})\"\n",
+    "\n",
+    "    dashboard.range((start_row + 1, start_col)).formula = sum_formula\n",
+    "\n",
+    "    print(\"✅ All blocks + Check block created.\")\n",
+    "\n",
+    "    output_wb.save()\n",
     "    app.quit()\n",
     "\n",
-    "    print(\"✅ Data replaced safely — structure, formatting & formulas intact.\")\n"
+    "if __name__ == '__main__':\n",
+    "    main()\n"
    ]
   },
   {
