--- a/temp.ipynb
+++ b/temp.ipynb
@@ -8,74 +8,73 @@
    "source": [
     "import xlwings as xw\n",
     "\n",
-    "def main():\n",
-    "    # ---- Open workbooks ----\n",
+    "def build_dashboard_with_check_blocks(\n",
+    "    file_path,\n",
+    "    template_block_range,\n",
+    "    check_block_range,\n",
+    "    output_sheet_name,\n",
+    "    headers_order,\n",
+    "    subheaders_dict,\n",
+    "    start_col\n",
+    "):\n",
     "    app = xw.App(visible=True)\n",
-    "    template_wb = xw.Book('template.xlsx')\n",
-    "    output_wb = xw.Book('output.xlsx')\n",
+    "    wb = app.books.open(file_path)\n",
+    "    ws = wb.sheets[output_sheet_name]\n",
     "\n",
-    "    block_template = template_wb.sheets['Block_Template']\n",
-    "    check_template = template_wb.sheets['Check_Template']\n",
-    "    dashboard = output_wb.sheets['Dashboard']\n",
+    "    # Where to start pasting blocks\n",
+    "    col_ptr = start_col\n",
     "\n",
-    "    countries = ['France', 'Germany', 'Spain']\n",
+    "    for header in headers_order:\n",
+    "        subheaders = subheaders_dict.get(header, [])\n",
     "\n",
-    "    # ---- Placement ----\n",
-    "    start_col = 1  # A\n",
-    "    start_row = 3\n",
+    "        # If header has subheaders, paste subheader blocks first\n",
+    "        for subheader in subheaders:\n",
+    "            template_range = ws.range(template_block_range)\n",
+    "            template_range.copy(ws.range((template_range.row, col_ptr)))\n",
+    "            print(f\"Pasted subheader block '{subheader}' at column {col_ptr}\")\n",
+    "            col_ptr += template_range.columns.count + 1  # +1 for spacing\n",
     "\n",
-    "    blocks_meta = []\n",
+    "        # Then paste header block\n",
+    "        template_range = ws.range(template_block_range)\n",
+    "        template_range.copy(ws.range((template_range.row, col_ptr)))\n",
+    "        print(f\"Pasted header block '{header}' at column {col_ptr}\")\n",
+    "        col_ptr += template_range.columns.count + 1\n",
     "\n",
-    "    for country in countries:\n",
-    "        # 1️⃣ Copy template block range\n",
-    "        source_range = block_template.range('B2:I10')  # example range\n",
+    "    # When all header & subheader blocks are done, paste the Check block\n",
+    "    check_template = ws.range(check_block_range)\n",
+    "    check_template.copy(ws.range((check_template.row, col_ptr)))\n",
+    "    print(f\"Pasted Check block at column {col_ptr}\")\n",
     "\n",
-    "        # 2️⃣ Determine where to paste\n",
-    "        target_range = dashboard.range((start_row, start_col))\n",
-    "        source_range.copy(target_range)\n",
+    "    col_ptr += check_template.columns.count + 1\n",
     "\n",
-    "        # 3️⃣ Fill the country name in merged title cell\n",
-    "        dashboard.range((start_row, start_col)).value = country\n",
+    "    # Finally: delete the **original template check block**\n",
+    "    check_template.columns.delete()\n",
+    "    print(\"Deleted original Check block template columns.\")\n",
     "\n",
-    "        # 4️⃣ Track block meta\n",
-    "        blocks_meta.append({\n",
-    "            'header': country,\n",
-    "            'start_row': start_row,\n",
-    "            'start_col': start_col,\n",
-    "            'end_row': start_row + source_range.rows.count - 1,\n",
-    "            'end_col': start_col + source_range.columns.count - 1\n",
-    "        })\n",
-    "\n",
-    "        # 5️⃣ Update for next block with gap\n",
-    "        start_row += source_range.rows.count + 2  # 2 rows gap\n",
-    "\n",
-    "    # ---- Now build Check block ----\n",
-    "\n",
-    "    # Example: copy check template to after last block\n",
-    "    check_range = check_template.range('B2:D5')\n",
-    "    target_check = dashboard.range((start_row, start_col))\n",
-    "    check_range.copy(target_check)\n",
-    "\n",
-    "    # Build dynamic SUM formula:\n",
-    "    total_cells = []\n",
-    "    for block in blocks_meta:\n",
-    "        # Example: each block’s total is always last row, col H (col 8)\n",
-    "        col_letter = xw.utils.col_name(block['start_col'] + 7)\n",
-    "        total_cell = f\"{col_letter}{block['end_row']}\"\n",
-    "        total_cells.append(total_cell)\n",
-    "\n",
-    "    # Example: write dynamic SUM into Check block cell\n",
-    "    sum_formula = f\"=SUM({','.join(total_cells)})\"\n",
-    "\n",
-    "    dashboard.range((start_row + 1, start_col)).formula = sum_formula\n",
-    "\n",
-    "    print(\"✅ All blocks + Check block created.\")\n",
-    "\n",
-    "    output_wb.save()\n",
+    "    # Save changes\n",
+    "    wb.save()\n",
+    "    wb.close()\n",
     "    app.quit()\n",
+    "    print(f\"✅ Dashboard built & saved: {file_path}\")\n",
     "\n",
-    "if __name__ == '__main__':\n",
-    "    main()\n"
+    "\n",
+    "# Example usage:\n",
+    "if __name__ == \"__main__\":\n",
+    "    headers_order = [\"A\", \"B\"]\n",
+    "    subheaders_dict = {\n",
+    "        \"A\": [\"A1\", \"A2\"],\n",
+    "        \"B\": [\"B1\"]\n",
+    "    }\n",
+    "\n",
+    "    build_dashboard_with_check_blocks(\n",
+    "        file_path=\"your_dashboard.xlsx\",\n",
+    "        template_block_range=\"V3:AC20\",  # Example block\n",
+    "        check_block_range=\"AE3:AL20\",    # Example Check block range\n",
+    "        output_sheet_name=\"Dashboard\",\n",
+    "        headers_order=headers_order,\n",
+    "        subheaders_dict=subheaders_dict,\n",
+    "        start_col=22  # Col V is col 22\n",
+    "    )\n"
    ]
   },
   {
