--- a/temp.ipynb
+++ b/temp.ipynb
@@ -6,6 +6,175 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from openpyxl import load_workbook\n",
+    "from openpyxl.utils import get_column_letter, column_index_from_string\n",
+    "from openpyxl.worksheet.cell_range import CellRange\n",
+    "from openpyxl.formula.translate import Translator\n",
+    "import copy\n",
+    "\n",
+    "\n",
+    "def build_ordered_block_map(wb_path, key_sheet_name, key_col, value_col, header_order_range):\n",
+    "    \"\"\"Reads headers/subheaders from Excel, builds ordered dict.\"\"\"\n",
+    "    wb = load_workbook(wb_path, data_only=True)\n",
+    "    ws = wb[key_sheet_name]\n",
+    "\n",
+    "    # Read ordered headers list\n",
+    "    ordered_headers = [\n",
+    "        cell.value for cell in ws[header_order_range]\n",
+    "        if cell.value is not None\n",
+    "    ]\n",
+    "\n",
+    "    # Build raw pairs\n",
+    "    raw_pairs = []\n",
+    "    for row in ws.iter_rows(min_row=2, max_col=ws.max_column):\n",
+    "        header = row[column_index_from_string(key_col) - 1].value\n",
+    "        subheader = row[column_index_from_string(value_col) - 1].value\n",
+    "        if header and subheader:\n",
+    "            raw_pairs.append((header.strip(), subheader.strip()))\n",
+    "\n",
+    "    # Build ordered map\n",
+    "    block_map = {}\n",
+    "    for key in ordered_headers:\n",
+    "        block_map[key] = []\n",
+    "\n",
+    "    for header, subheader in raw_pairs:\n",
+    "        if header == subheader:\n",
+    "            continue  # skip if same, we treat it as header-only\n",
+    "        if header in block_map and subheader not in block_map[header]:\n",
+    "            block_map[header].append(subheader)\n",
+    "\n",
+    "    wb.close()\n",
+    "    return block_map\n",
+    "\n",
+    "\n",
+    "def replicate_blocks_with_tracking(\n",
+    "    file_path,\n",
+    "    sheet_name,\n",
+    "    source_block_range,\n",
+    "    block_map,\n",
+    "    output_start_col,\n",
+    "    header_row=3,\n",
+    "    text_row=5\n",
+    "):\n",
+    "    wb = load_workbook(file_path)\n",
+    "    ws = wb[sheet_name]\n",
+    "\n",
+    "    start_col_idx = column_index_from_string(source_block_range[0])\n",
+    "    end_col_idx = column_index_from_string(source_block_range[1])\n",
+    "    num_cols_to_copy = end_col_idx - start_col_idx + 1\n",
+    "\n",
+    "    current_col_idx = output_start_col\n",
+    "\n",
+    "    block_tracker = []\n",
+    "\n",
+    "    for header, subheaders in block_map.items():\n",
+    "        # 1️⃣ — replicate subheader blocks first\n",
+    "        for subheader in subheaders:\n",
+    "            coords = paste_block(ws, start_col_idx, end_col_idx, current_col_idx,\n",
+    "                                 header_row, text_row, header, subheader)\n",
+    "            block_tracker.append({\n",
+    "                'type': 'subheader',\n",
+    "                'header': header,\n",
+    "                'name': subheader,\n",
+    "                'cols': coords\n",
+    "            })\n",
+    "            current_col_idx += num_cols_to_copy + 1  # gap\n",
+    "\n",
+    "        # 2️⃣ — replicate header-only block\n",
+    "        coords = paste_block(ws, start_col_idx, end_col_idx, current_col_idx,\n",
+    "                             header_row, text_row, header, header)\n",
+    "        block_tracker.append({\n",
+    "            'type': 'header',\n",
+    "            'header': header,\n",
+    "            'name': header,\n",
+    "            'cols': coords\n",
+    "        })\n",
+    "        current_col_idx += num_cols_to_copy + 1\n",
+    "\n",
+    "    wb.save(file_path)\n",
+    "    wb.close()\n",
+    "\n",
+    "    print(\"\\n✅✅ All blocks created and tracked.\\n\")\n",
+    "    for entry in block_tracker:\n",
+    "        print(entry)\n",
+    "    return block_tracker\n",
+    "\n",
+    "\n",
+    "def paste_block(ws, src_start_idx, src_end_idx, dest_start_idx, header_row, text_row, header, subheader):\n",
+    "    num_cols = src_end_idx - src_start_idx + 1\n",
+    "\n",
+    "    for row in ws.iter_rows(\n",
+    "        min_col=src_start_idx,\n",
+    "        max_col=src_end_idx,\n",
+    "        min_row=1,\n",
+    "        max_row=ws.max_row\n",
+    "    ):\n",
+    "        for i, source_cell in enumerate(row):\n",
+    "            dest_col_idx = dest_start_idx + i\n",
+    "            new_cell = ws.cell(row=source_cell.row, column=dest_col_idx)\n",
+    "\n",
+    "            # Formula handling\n",
+    "            if source_cell.data_type == 'f':\n",
+    "                orig_formula = source_cell.value\n",
+    "                translated = Translator(orig_formula, origin=source_cell.coordinate).translate_formula(new_cell.coordinate)\n",
+    "                new_cell.value = translated\n",
+    "            else:\n",
+    "                new_cell.value = source_cell.value\n",
+    "\n",
+    "            new_cell.font = copy.copy(source_cell.font)\n",
+    "            new_cell.border = copy.copy(source_cell.border)\n",
+    "            new_cell.fill = copy.copy(source_cell.fill)\n",
+    "            new_cell.number_format = copy.copy(source_cell.number_format)\n",
+    "            new_cell.protection = copy.copy(source_cell.protection)\n",
+    "            new_cell.alignment = copy.copy(source_cell.alignment)\n",
+    "\n",
+    "    # Merged header row\n",
+    "    merged_start = get_column_letter(dest_start_idx)\n",
+    "    merged_end = get_column_letter(dest_start_idx + num_cols - 1)\n",
+    "    merge_range = f\"{merged_start}{header_row}:{merged_end}{header_row}\"\n",
+    "    ws.merge_cells(merge_range)\n",
+    "    ws[f\"{merged_start}{header_row}\"].value = header\n",
+    "\n",
+    "    # Merged text row\n",
+    "    merge_range_text = f\"{merged_start}{text_row}:{merged_end}{text_row}\"\n",
+    "    ws.merge_cells(merge_range_text)\n",
+    "    ws[f\"{merged_start}{text_row}\"].value = subheader\n",
+    "\n",
+    "    return f\"{merged_start}:{merged_end}\"\n",
+    "\n",
+    "\n",
+    "# ==========================\n",
+    "# ✅ ✅ ✅ EXAMPLE USAGE\n",
+    "# ==========================\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    # 1️⃣ Build block map from key sheet\n",
+    "    block_map = build_ordered_block_map(\n",
+    "        wb_path=\"your_dashboard.xlsx\",\n",
+    "        key_sheet_name=\"Keys\",\n",
+    "        key_col=\"A\",\n",
+    "        value_col=\"B\",\n",
+    "        header_order_range=\"D1:D10\"  # For example — adjust to your file\n",
+    "    )\n",
+    "\n",
+    "    # 2️⃣ Paste blocks with tracking\n",
+    "    tracker = replicate_blocks_with_tracking(\n",
+    "        file_path=\"your_dashboard.xlsx\",\n",
+    "        sheet_name=\"Dashboard\",\n",
+    "        source_block_range=(\"V\", \"AC\"),\n",
+    "        block_map=block_map,\n",
+    "        output_start_col=column_index_from_string(\"AE\"),\n",
+    "        header_row=3,\n",
+    "        text_row=5\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import xlwings as xw\n",
     "\n",
     "def build_dashboard_with_check_blocks(\n",
