--- a/temp.ipynb
+++ b/temp.ipynb
@@ -10,87 +10,91 @@
     "from openpyxl.utils import get_column_letter, column_index_from_string\n",
     "from openpyxl.worksheet.cell_range import CellRange\n",
     "from openpyxl.formula.translate import Translator\n",
+    "from collections import OrderedDict\n",
     "import copy\n",
     "\n",
-    "\n",
-    "def replicate_blocks_with_ordered_dict(\n",
+    "def replicate_dashboard_blocks_from_dict(\n",
     "    file_path,\n",
     "    sheet_name,\n",
-    "    source_block_range,\n",
-    "    ordered_block_map,   # <- YOUR existing dict!\n",
+    "    header_subheader_dict,\n",
+    "    source_block_range_sub,  # (start_col, end_col, min_row, max_row)\n",
+    "    source_block_range_header,  # (start_col, end_col, min_row, max_row)\n",
     "    output_start_col,\n",
-    "    header_row=3,\n",
-    "    text_row=5\n",
+    "    header_row,\n",
+    "    text_row\n",
     "):\n",
     "    wb = load_workbook(file_path)\n",
     "    ws = wb[sheet_name]\n",
     "\n",
-    "    src_start_idx = column_index_from_string(source_block_range[0])\n",
-    "    src_end_idx = column_index_from_string(source_block_range[1])\n",
-    "    num_cols_to_copy = src_end_idx - src_start_idx + 1\n",
-    "\n",
-    "    current_col_idx = output_start_col\n",
+    "    current_col_idx = column_index_from_string(output_start_col)\n",
     "\n",
     "    block_tracker = []\n",
     "\n",
-    "    for header, subheaders in ordered_block_map.items():\n",
-    "        # 1️⃣ Subheader blocks first\n",
-    "        for subheader in subheaders:\n",
-    "            if subheader == header:\n",
-    "                continue  # Skip if same (header-only)\n",
-    "            coords = paste_block(ws, src_start_idx, src_end_idx, current_col_idx,\n",
-    "                                 header_row, text_row, header, subheader)\n",
-    "            block_tracker.append({\n",
-    "                'type': 'subheader',\n",
-    "                'header': header,\n",
-    "                'name': subheader,\n",
-    "                'cols': coords\n",
-    "            })\n",
-    "            current_col_idx += num_cols_to_copy + 1\n",
+    "    for header, subheaders in header_subheader_dict.items():\n",
+    "        if subheaders:\n",
+    "            # Process each subheader first\n",
+    "            for subheader in subheaders:\n",
+    "                print(f\"🔹 Adding block for subheader: {subheader}\")\n",
     "\n",
-    "        # 2️⃣ Header-only block\n",
-    "        coords = paste_block(ws, src_start_idx, src_end_idx, current_col_idx,\n",
-    "                             header_row, text_row, header, header)\n",
-    "        block_tracker.append({\n",
-    "            'type': 'header',\n",
-    "            'header': header,\n",
-    "            'name': header,\n",
-    "            'cols': coords\n",
-    "        })\n",
-    "        current_col_idx += num_cols_to_copy + 1\n",
+    "                cell_range = paste_block(\n",
+    "                    ws, subheader,\n",
+    "                    source_block_range_sub,\n",
+    "                    current_col_idx,\n",
+    "                    header_row,\n",
+    "                    text_row\n",
+    "                )\n",
+    "                block_tracker.append({'type': 'subheader', 'label': subheader, 'cell_range': cell_range})\n",
+    "                current_col_idx += (column_index_from_string(source_block_range_sub[1]) - column_index_from_string(source_block_range_sub[0]) + 1) + 1\n",
+    "\n",
+    "        # Then add the header-only block\n",
+    "        print(f\"🔹 Adding block for header: {header}\")\n",
+    "\n",
+    "        cell_range = paste_block(\n",
+    "            ws, header,\n",
+    "            source_block_range_header,\n",
+    "            current_col_idx,\n",
+    "            header_row,\n",
+    "            text_row\n",
+    "        )\n",
+    "        block_tracker.append({'type': 'header', 'label': header, 'cell_range': cell_range})\n",
+    "        current_col_idx += (column_index_from_string(source_block_range_header[1]) - column_index_from_string(source_block_range_header[0]) + 1) + 1\n",
     "\n",
     "    wb.save(file_path)\n",
     "    wb.close()\n",
     "\n",
-    "    print(\"\\n✅ All blocks built.\\n\")\n",
-    "    for entry in block_tracker:\n",
-    "        print(entry)\n",
+    "    print(\"✅✅ All blocks created!\")\n",
     "    return block_tracker\n",
     "\n",
     "\n",
-    "def paste_block(ws, src_start_idx, src_end_idx, dest_start_idx,\n",
-    "                header_row, text_row, header, subheader):\n",
+    "def paste_block(ws, label, source_block_range, dest_start_idx, header_row, text_row):\n",
+    "    src_start_idx = column_index_from_string(source_block_range[0])\n",
+    "    src_end_idx   = column_index_from_string(source_block_range[1])\n",
+    "    min_row       = source_block_range[2]\n",
+    "    max_row       = source_block_range[3]\n",
     "\n",
     "    num_cols = src_end_idx - src_start_idx + 1\n",
     "\n",
     "    for row in ws.iter_rows(\n",
     "        min_col=src_start_idx,\n",
     "        max_col=src_end_idx,\n",
-    "        min_row=1,\n",
-    "        max_row=ws.max_row\n",
+    "        min_row=min_row,\n",
+    "        max_row=max_row\n",
     "    ):\n",
     "        for i, source_cell in enumerate(row):\n",
-    "            dest_col_idx = dest_start_idx + i\n",
-    "            new_cell = ws.cell(row=source_cell.row, column=dest_col_idx)\n",
+    "            new_col_idx = dest_start_idx + i\n",
+    "            new_cell = ws.cell(row=source_cell.row, column=new_col_idx)\n",
     "\n",
+    "            # Copy formula with translation\n",
     "            if source_cell.data_type == 'f':\n",
-    "                translated = Translator(source_cell.value,\n",
-    "                                        origin=source_cell.coordinate\n",
-    "                                        ).translate_formula(new_cell.coordinate)\n",
-    "                new_cell.value = translated\n",
+    "                orig_formula = source_cell.value\n",
+    "                origin = source_cell.coordinate\n",
+    "                target = new_cell.coordinate\n",
+    "                new_formula = Translator(orig_formula, origin=origin).translate_formula(target)\n",
+    "                new_cell.value = new_formula\n",
     "            else:\n",
     "                new_cell.value = source_cell.value\n",
     "\n",
+    "            # Copy style\n",
     "            new_cell.font = copy.copy(source_cell.font)\n",
     "            new_cell.border = copy.copy(source_cell.border)\n",
     "            new_cell.fill = copy.copy(source_cell.fill)\n",
@@ -98,38 +102,70 @@
     "            new_cell.protection = copy.copy(source_cell.protection)\n",
     "            new_cell.alignment = copy.copy(source_cell.alignment)\n",
     "\n",
-    "    # Merged header\n",
+    "    # --- Merge header row cells ---\n",
     "    merged_start = get_column_letter(dest_start_idx)\n",
     "    merged_end = get_column_letter(dest_start_idx + num_cols - 1)\n",
-    "    ws.merge_cells(f\"{merged_start}{header_row}:{merged_end}{header_row}\")\n",
-    "    ws[f\"{merged_start}{header_row}\"].value = header\n",
+    "    new_merge_range = f\"{merged_start}{header_row}:{merged_end}{header_row}\"\n",
     "\n",
-    "    # Merged text row\n",
-    "    ws.merge_cells(f\"{merged_start}{text_row}:{merged_end}{text_row}\")\n",
-    "    ws[f\"{merged_start}{text_row}\"].value = subheader\n",
+    "    for merge in list(ws.merged_cells.ranges):\n",
+    "        if CellRange(new_merge_range).coord in merge.coord:\n",
+    "            ws.merged_cells.ranges.remove(merge)\n",
+    "    ws.merge_cells(new_merge_range)\n",
+    "    ws[f\"{merged_start}{header_row}\"] = label\n",
+    "\n",
+    "    # --- Merge text row cells ---\n",
+    "    text_merge_range = f\"{merged_start}{text_row}:{merged_end}{text_row}\"\n",
+    "\n",
+    "    for merge in list(ws.merged_cells.ranges):\n",
+    "        if CellRange(text_merge_range).coord in merge.coord:\n",
+    "            ws.merged_cells.ranges.remove(merge)\n",
+    "    ws.merge_cells(text_merge_range)\n",
+    "    ws[f\"{merged_start}{text_row}\"] = label\n",
+    "\n",
+    "    # Style for header\n",
+    "    source_header_cell = ws[f\"{source_block_range[0]}{header_row}\"]\n",
+    "    new_header_cell = ws[f\"{merged_start}{header_row}\"]\n",
+    "    new_header_cell.font = copy.copy(source_header_cell.font)\n",
+    "    new_header_cell.border = copy.copy(source_header_cell.border)\n",
+    "    new_header_cell.fill = copy.copy(source_header_cell.fill)\n",
+    "    new_header_cell.number_format = copy.copy(source_header_cell.number_format)\n",
+    "    new_header_cell.protection = copy.copy(source_header_cell.protection)\n",
+    "    new_header_cell.alignment = copy.copy(source_header_cell.alignment)\n",
+    "\n",
+    "    # Style for text row\n",
+    "    source_text_cell = ws[f\"{source_block_range[0]}{text_row}\"]\n",
+    "    new_text_cell = ws[f\"{merged_start}{text_row}\"]\n",
+    "    new_text_cell.font = copy.copy(source_text_cell.font)\n",
+    "    new_text_cell.border = copy.copy(source_text_cell.border)\n",
+    "    new_text_cell.fill = copy.copy(source_text_cell.fill)\n",
+    "    new_text_cell.number_format = copy.copy(source_text_cell.number_format)\n",
+    "    new_text_cell.protection = copy.copy(source_text_cell.protection)\n",
+    "    new_text_cell.alignment = copy.copy(source_text_cell.alignment)\n",
     "\n",
     "    return f\"{merged_start}:{merged_end}\"\n",
     "\n",
     "\n",
-    "# ==========================================\n",
-    "# ✅✅✅ EXAMPLE: using your ready-made dict\n",
-    "# ==========================================\n",
+    "# Example usage\n",
     "if __name__ == \"__main__\":\n",
-    "    ordered_map = {\n",
-    "        'Header1': ['Sub1', 'Sub2'],\n",
-    "        'Header2': ['Sub3'],\n",
-    "        'Header3': ['Header3'],  # means header only\n",
-    "    }\n",
+    "    # Ordered dictionary example\n",
+    "    header_subheader_dict = OrderedDict({\n",
+    "        \"Header1\": [\"Sub1\", \"Sub2\"],\n",
+    "        \"Header2\": [],\n",
+    "        \"Header3\": [\"Sub3\"]\n",
+    "    })\n",
     "\n",
-    "    replicate_blocks_with_ordered_dict(\n",
+    "    block_tracker = replicate_dashboard_blocks_from_dict(\n",
     "        file_path=\"your_dashboard.xlsx\",\n",
     "        sheet_name=\"Dashboard\",\n",
-    "        source_block_range=(\"V\", \"AC\"),\n",
-    "        ordered_block_map=ordered_map,\n",
-    "        output_start_col=column_index_from_string(\"AE\"),\n",
+    "        header_subheader_dict=header_subheader_dict,\n",
+    "        source_block_range_sub=(\"V\", \"AC\", 1, 20),\n",
+    "        source_block_range_header=(\"AE\", \"AL\", 1, 15),\n",
+    "        output_start_col=\"AM\",\n",
     "        header_row=3,\n",
-    "        text_row=5\n",
-    "    )\n"
+    "        text_row=4\n",
+    "    )\n",
+    "\n",
+    "    print(\"Block ranges for future reference:\", block_tracker)\n"
    ]
   },
   {
