--- a/temp.ipynb
+++ b/temp.ipynb
@@ -10,170 +10,168 @@
     "from openpyxl.utils import get_column_letter, column_index_from_string\n",
     "from openpyxl.worksheet.cell_range import CellRange\n",
     "from openpyxl.formula.translate import Translator\n",
+    "from collections import OrderedDict\n",
     "import copy\n",
     "\n",
     "\n",
-    "def replicate_blocks_from_key_value(\n",
+    "def replicate_blocks_with_headers_subheaders(\n",
     "    file_path,\n",
     "    sheet_name,\n",
-    "    header_template_range,     # (start_col, end_col)\n",
-    "    subheader_template_range,  # (start_col, end_col)\n",
-    "    key_value_dict,            # OrderedDict: {Header: [Sub1, Sub2, Header]}\n",
+    "    header_template_range,\n",
+    "    subheader_template_range,\n",
+    "    header_subheader_dict,\n",
+    "    start_col,  # e.g., \"AN\"\n",
     "    header_row=3,\n",
     "    text_row=5\n",
     "):\n",
     "    wb = load_workbook(file_path)\n",
     "    ws = wb[sheet_name]\n",
     "\n",
-    "    # Template block info\n",
-    "    header_start_col, header_end_col = header_template_range\n",
-    "    sub_start_col, sub_end_col = subheader_template_range\n",
+    "    # --- Parse ranges ---\n",
+    "    h_start_col, h_end_col = header_template_range\n",
+    "    s_start_col, s_end_col = subheader_template_range\n",
     "\n",
-    "    header_start_idx = column_index_from_string(header_start_col)\n",
-    "    header_end_idx = column_index_from_string(header_end_col)\n",
-    "    sub_start_idx = column_index_from_string(sub_start_col)\n",
-    "    sub_end_idx = column_index_from_string(sub_end_col)\n",
+    "    h_start_idx = column_index_from_string(h_start_col)\n",
+    "    h_end_idx = column_index_from_string(h_end_col)\n",
+    "    s_start_idx = column_index_from_string(s_start_col)\n",
+    "    s_end_idx = column_index_from_string(s_end_col)\n",
     "\n",
-    "    num_cols_header = header_end_idx - header_start_idx + 1\n",
-    "    num_cols_sub = sub_end_idx - sub_start_idx + 1\n",
+    "    num_cols_h = h_end_idx - h_start_idx + 1\n",
+    "    num_cols_s = s_end_idx - s_start_idx + 1\n",
     "\n",
-    "    # Place blocks after template blocks with 1 blank col in between\n",
-    "    current_col_idx = max(header_end_idx, sub_end_idx) + 2\n",
+    "    current_col_idx = column_index_from_string(start_col)\n",
     "\n",
-    "    for key, values in key_value_dict.items():\n",
-    "        print(f\"🔷 Handling header: {key}\")\n",
+    "    for header, subheaders in header_subheader_dict.items():\n",
+    "        print(f\"🔷 Processing Header: {header}\")\n",
     "\n",
-    "        for val in values:\n",
-    "            if val == key:\n",
-    "                continue  # Skip redundant subheader same as key\n",
+    "        for subheader in subheaders:\n",
+    "            if subheader == header:\n",
+    "                continue  # skip redundant, handle header block below\n",
     "\n",
-    "            print(f\"  ➜ Adding subheader block: {val}\")\n",
+    "            print(f\"   ➜ Adding Subheader Block: {subheader} at {get_column_letter(current_col_idx)}\")\n",
     "\n",
-    "            # --- COPY subheader block ---\n",
+    "            # Copy subheader block\n",
     "            for row in ws.iter_rows(\n",
-    "                min_col=sub_start_idx,\n",
-    "                max_col=sub_end_idx,\n",
+    "                min_col=s_start_idx,\n",
+    "                max_col=s_end_idx,\n",
     "                min_row=1,\n",
     "                max_row=ws.max_row\n",
     "            ):\n",
-    "                for i, source_cell in enumerate(row):\n",
-    "                    new_col_idx = current_col_idx + i\n",
-    "                    new_cell = ws.cell(row=source_cell.row, column=new_col_idx)\n",
+    "                for i, src_cell in enumerate(row):\n",
+    "                    new_col = current_col_idx + i\n",
+    "                    tgt_cell = ws.cell(row=src_cell.row, column=new_col)\n",
     "\n",
-    "                    if source_cell.data_type == 'f':\n",
-    "                        orig_formula = source_cell.value\n",
-    "                        origin = source_cell.coordinate\n",
-    "                        target = new_cell.coordinate\n",
-    "                        new_formula = Translator(orig_formula, origin=origin).translate_formula(target)\n",
-    "                        new_cell.value = new_formula\n",
+    "                    if src_cell.data_type == 'f':\n",
+    "                        tgt_cell.value = Translator(src_cell.value, src_cell.coordinate).translate_formula(tgt_cell.coordinate)\n",
     "                    else:\n",
-    "                        new_cell.value = source_cell.value\n",
+    "                        tgt_cell.value = src_cell.value\n",
     "\n",
-    "                    new_cell.font = copy.copy(source_cell.font)\n",
-    "                    new_cell.border = copy.copy(source_cell.border)\n",
-    "                    new_cell.fill = copy.copy(source_cell.fill)\n",
-    "                    new_cell.number_format = copy.copy(source_cell.number_format)\n",
-    "                    new_cell.protection = copy.copy(source_cell.protection)\n",
-    "                    new_cell.alignment = copy.copy(source_cell.alignment)\n",
+    "                    tgt_cell.font = copy.copy(src_cell.font)\n",
+    "                    tgt_cell.border = copy.copy(src_cell.border)\n",
+    "                    tgt_cell.fill = copy.copy(src_cell.fill)\n",
+    "                    tgt_cell.number_format = copy.copy(src_cell.number_format)\n",
+    "                    tgt_cell.protection = copy.copy(src_cell.protection)\n",
+    "                    tgt_cell.alignment = copy.copy(src_cell.alignment)\n",
     "\n",
-    "            # --- HEADER/TEXT for subheader block ---\n",
-    "            merged_start = get_column_letter(current_col_idx)\n",
-    "            merged_end = get_column_letter(current_col_idx + num_cols_sub - 1)\n",
-    "            new_merge_range = f\"{merged_start}{header_row}:{merged_end}{header_row}\"\n",
+    "            # Merge and fill header row for subheader block\n",
+    "            merge_start = get_column_letter(current_col_idx)\n",
+    "            merge_end = get_column_letter(current_col_idx + num_cols_s - 1)\n",
+    "            merge_range = f\"{merge_start}{header_row}:{merge_end}{header_row}\"\n",
     "\n",
     "            for merge in list(ws.merged_cells.ranges):\n",
-    "                if CellRange(new_merge_range).coord in merge.coord:\n",
+    "                if CellRange(merge_range).coord in merge.coord:\n",
     "                    ws.merged_cells.ranges.remove(merge)\n",
     "\n",
-    "            ws.merge_cells(new_merge_range)\n",
-    "            ws[f\"{merged_start}{header_row}\"] = val\n",
+    "            ws.merge_cells(merge_range)\n",
+    "            ws[f\"{merge_start}{header_row}\"] = subheader\n",
     "\n",
-    "            # Copy style from subheader block template\n",
-    "            source_header_cell = ws[f\"{sub_start_col}{header_row}\"]\n",
-    "            new_header_cell = ws[f\"{merged_start}{header_row}\"]\n",
-    "            new_header_cell.font = copy.copy(source_header_cell.font)\n",
-    "            new_header_cell.border = copy.copy(source_header_cell.border)\n",
-    "            new_header_cell.fill = copy.copy(source_header_cell.fill)\n",
-    "            new_header_cell.number_format = copy.copy(source_header_cell.number_format)\n",
-    "            new_header_cell.protection = copy.copy(source_header_cell.protection)\n",
-    "            new_header_cell.alignment = copy.copy(source_header_cell.alignment)\n",
+    "            # Fill next row with subheader name\n",
+    "            for i in range(num_cols_s):\n",
+    "                cell = ws.cell(row=header_row + 1, column=current_col_idx + i)\n",
+    "                cell.value = subheader\n",
     "\n",
-    "            # Advance for next subheader block\n",
-    "            current_col_idx += num_cols_sub + 1\n",
+    "                src_cell = ws.cell(row=header_row + 1, column=s_start_idx + i)\n",
+    "                cell.font = copy.copy(src_cell.font)\n",
+    "                cell.border = copy.copy(src_cell.border)\n",
+    "                cell.fill = copy.copy(src_cell.fill)\n",
+    "                cell.number_format = copy.copy(src_cell.number_format)\n",
+    "                cell.protection = copy.copy(src_cell.protection)\n",
+    "                cell.alignment = copy.copy(src_cell.alignment)\n",
     "\n",
-    "        # --- COPY header block ---\n",
-    "        print(f\"✅ Adding header block: {key}\")\n",
+    "            current_col_idx += num_cols_s + 1  # advance\n",
+    "\n",
+    "        print(f\"✅ Adding Header Block: {header} at {get_column_letter(current_col_idx)}\")\n",
+    "\n",
+    "        # Copy header block\n",
     "        for row in ws.iter_rows(\n",
-    "            min_col=header_start_idx,\n",
-    "            max_col=header_end_idx,\n",
+    "            min_col=h_start_idx,\n",
+    "            max_col=h_end_idx,\n",
     "            min_row=1,\n",
     "            max_row=ws.max_row\n",
     "        ):\n",
-    "            for i, source_cell in enumerate(row):\n",
-    "                new_col_idx = current_col_idx + i\n",
-    "                new_cell = ws.cell(row=source_cell.row, column=new_col_idx)\n",
+    "            for i, src_cell in enumerate(row):\n",
+    "                new_col = current_col_idx + i\n",
+    "                tgt_cell = ws.cell(row=src_cell.row, column=new_col)\n",
     "\n",
-    "                if source_cell.data_type == 'f':\n",
-    "                    orig_formula = source_cell.value\n",
-    "                    origin = source_cell.coordinate\n",
-    "                    target = new_cell.coordinate\n",
-    "                    new_formula = Translator(orig_formula, origin=origin).translate_formula(target)\n",
-    "                    new_cell.value = new_formula\n",
+    "                if src_cell.data_type == 'f':\n",
+    "                    tgt_cell.value = Translator(src_cell.value, src_cell.coordinate).translate_formula(tgt_cell.coordinate)\n",
     "                else:\n",
-    "                    new_cell.value = source_cell.value\n",
+    "                    tgt_cell.value = src_cell.value\n",
     "\n",
-    "                new_cell.font = copy.copy(source_cell.font)\n",
-    "                new_cell.border = copy.copy(source_cell.border)\n",
-    "                new_cell.fill = copy.copy(source_cell.fill)\n",
-    "                new_cell.number_format = copy.copy(source_cell.number_format)\n",
-    "                new_cell.protection = copy.copy(source_cell.protection)\n",
-    "                new_cell.alignment = copy.copy(source_cell.alignment)\n",
+    "                tgt_cell.font = copy.copy(src_cell.font)\n",
+    "                tgt_cell.border = copy.copy(src_cell.border)\n",
+    "                tgt_cell.fill = copy.copy(src_cell.fill)\n",
+    "                tgt_cell.number_format = copy.copy(src_cell.number_format)\n",
+    "                tgt_cell.protection = copy.copy(src_cell.protection)\n",
+    "                tgt_cell.alignment = copy.copy(src_cell.alignment)\n",
     "\n",
-    "        merged_start = get_column_letter(current_col_idx)\n",
-    "        merged_end = get_column_letter(current_col_idx + num_cols_header - 1)\n",
-    "        new_merge_range = f\"{merged_start}{header_row}:{merged_end}{header_row}\"\n",
+    "        # Merge and fill header row for header block\n",
+    "        merge_start = get_column_letter(current_col_idx)\n",
+    "        merge_end = get_column_letter(current_col_idx + num_cols_h - 1)\n",
+    "        merge_range = f\"{merge_start}{header_row}:{merge_end}{header_row}\"\n",
     "\n",
     "        for merge in list(ws.merged_cells.ranges):\n",
-    "            if CellRange(new_merge_range).coord in merge.coord:\n",
+    "            if CellRange(merge_range).coord in merge.coord:\n",
     "                ws.merged_cells.ranges.remove(merge)\n",
     "\n",
-    "        ws.merge_cells(new_merge_range)\n",
-    "        ws[f\"{merged_start}{header_row}\"] = key\n",
+    "        ws.merge_cells(merge_range)\n",
+    "        ws[f\"{merge_start}{header_row}\"] = header\n",
     "\n",
-    "        source_header_cell = ws[f\"{header_start_col}{header_row}\"]\n",
-    "        new_header_cell = ws[f\"{merged_start}{header_row}\"]\n",
-    "        new_header_cell.font = copy.copy(source_header_cell.font)\n",
-    "        new_header_cell.border = copy.copy(source_header_cell.border)\n",
-    "        new_header_cell.fill = copy.copy(source_header_cell.fill)\n",
-    "        new_header_cell.number_format = copy.copy(source_header_cell.number_format)\n",
-    "        new_header_cell.protection = copy.copy(source_header_cell.protection)\n",
-    "        new_header_cell.alignment = copy.copy(source_header_cell.alignment)\n",
+    "        # Fill next row with header name\n",
+    "        for i in range(num_cols_h):\n",
+    "            cell = ws.cell(row=header_row + 1, column=current_col_idx + i)\n",
+    "            cell.value = header\n",
     "\n",
-    "        current_col_idx += num_cols_header + 1\n",
+    "            src_cell = ws.cell(row=header_row + 1, column=h_start_idx + i)\n",
+    "            cell.font = copy.copy(src_cell.font)\n",
+    "            cell.border = copy.copy(src_cell.border)\n",
+    "            cell.fill = copy.copy(src_cell.fill)\n",
+    "            cell.number_format = copy.copy(src_cell.number_format)\n",
+    "            cell.protection = copy.copy(src_cell.protection)\n",
+    "            cell.alignment = copy.copy(src_cell.alignment)\n",
+    "\n",
+    "        current_col_idx += num_cols_h + 1\n",
     "\n",
     "    wb.save(file_path)\n",
     "    wb.close()\n",
-    "    print(\"✅✅ All header & subheader blocks replicated successfully!\")\n",
+    "    print(\"✅✅ All header and subheader blocks done!\")\n",
     "\n",
     "\n",
-    "# ------------------------\n",
-    "# EXAMPLE USAGE:\n",
+    "# --- EXAMPLE USAGE ---\n",
     "if __name__ == \"__main__\":\n",
-    "    from collections import OrderedDict\n",
-    "\n",
-    "    # Example ordered keys & subheaders\n",
     "    my_dict = OrderedDict({\n",
-    "        \"Header1\": [\"SubA\", \"SubB\", \"Header1\"],\n",
-    "        \"Header2\": [\"SubC\", \"Header2\"],\n",
-    "        \"Header3\": [\"Header3\"]\n",
+    "        \"Paris\": [\"Paris\", \"Louvre\"],\n",
+    "        \"Hongkong\": [\"HK Island\", \"Kowloon\", \"Hongkong\"],\n",
+    "        \"India\": [\"Delhi\", \"Mumbai\", \"India\"]\n",
     "    })\n",
     "\n",
-    "    replicate_blocks_from_key_value(\n",
+    "    replicate_blocks_with_headers_subheaders(\n",
     "        file_path=\"your_dashboard.xlsx\",\n",
     "        sheet_name=\"Dashboard\",\n",
-    "        header_template_range=(\"V\", \"AC\"),  # Example header block template\n",
-    "        subheader_template_range=(\"AE\", \"AL\"),  # Example subheader block template\n",
-    "        key_value_dict=my_dict,\n",
+    "        header_template_range=(\"V\", \"AC\"),\n",
+    "        subheader_template_range=(\"AE\", \"AL\"),\n",
+    "        header_subheader_dict=my_dict,\n",
+    "        start_col=\"AN\",\n",
     "        header_row=3,\n",
     "        text_row=5\n",
     "    )\n"
